changed file paths for reset and style.css and update titles in head tags

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Portfolio | Joseph Ragno III</title>
+  <link rel="stylesheet" type="text/css" href="/Users/joe/Desktop/code/myPortfolio/assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="/Users/joe/Desktop/code/myPortfolio/assets/css/style.css">
 </head>
 
 <body>
