updated links in head

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Joseph Ragno III</title>
-  <link rel="stylesheet" type="text/css" href="/Users/joe/Desktop/code/myPortfolio/assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="/Users/joe/Desktop/code/myPortfolio/assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
