added more projects to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,24 @@
         <h3>Rock Paper Scissors</h3>
       </div>
 
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Parking Ticket Reimbursement">
+
+        <h3>Parking Ticket Reimbursement</h3>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Train Schedule">
+
+        <h3>Train Schedule</h3>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
+
+        <h3>Liri</h3>
+      </div>
+
     </section>
 
   </div>
