--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,24 @@
         <h3>Liri</h3>
       </div>
 
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
+
+        <h3>Bamazon</h3>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
+
+        <h3>Black Box Bank</h3>
+      </div>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
+
+        <h3>Friend Finder</h3>
+      </div>
+
     </section>
 
   </div>
