added links to portfolio projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,63 +28,63 @@
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
-        <h3>Word Guess</h3>
+        <h3><a href="">Word Guess</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
-        <h3>RPG Game</h3>
+        <h3><a href="">RPG Game</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
-        <h3>Trivia Game</h3>
+        <h3><a href="">Trivia Game</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3><a href="">Rutgers Info Widget</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3><a href="">Rock Paper Scissors</a></h3>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Parking Ticket Reimbursement">
 
-        <h3>Parking Ticket Reimbursement</h3>
+        <h3><a href="https://jragno918.github.io/PTR/">Parking Ticket Reimbursement</a></h3>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Train Schedule">
 
-        <h3>Train Schedule</h3>
+        <h3><a href="https://jragno918.github.io/trainSchedule/">Train Schedule</a></h3>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
 
-        <h3>Liri</h3>
+        <h3><a href="https://github.com/jragno918/liriBot">Liri</a></h3>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
 
-        <h3>Bamazon</h3>
+        <h3><a href="https://github.com/jragno918/mockAmazon">Bamazon</a></h3>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
 
-        <h3>Black Box Bank</h3>
+        <h3><a href="https://damp-journey-84727.herokuapp.com/">Black Box Bank</a></h3>
       </div>
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Liri">
 
-        <h3>Friend Finder</h3>
+        <h3><a href="https://jragno918.github.io/friendFinder/">Friend Finder</a></h3>
       </div>
 
     </section>
